--- a/src/styles/root-sass.scss
+++ b/src/styles/root-sass.scss
@@ -2,6 +2,8 @@
 @import '../client/components/searchBar/SearchBar.scss';
 @import '../client/containers/searchControls/SearchControls.scss';
 @import '../client/components/pagination/Pagination.scss';
+@import '../client/containers/characterDetails/CharacterDetails.scss';
+@import '../client/components/characterCards/CharacterCards.scss';
 
 body {
   box-sizing: border-box;
