feat(*): finished a minimum viable product

--- a/src/styles/root-sass.scss
+++ b/src/styles/root-sass.scss
@@ -4,6 +4,7 @@
 @import '../client/components/pagination/Pagination.scss';
 @import '../client/containers/characterDetails/CharacterDetails.scss';
 @import '../client/components/characterCards/CharacterCards.scss';
+@import '../client/components/sortAndFilter/SortAndFilter.scss';
 
 body {
   box-sizing: border-box;
