--- a/src/client/components/characterCards/CharacterCards.scss
+++ b/src/client/components/characterCards/CharacterCards.scss
@@ -15,7 +15,7 @@
         text-align: left;
         padding-left: 6px;
         position: absolute;
-        top: 255px;
+        bottom: 215px;
         background-color: black;
         width: 100%;
         opacity: 0.8;
